# SimpleSecurity

./: .gitignore  CHANGELOG.md  README.md  install_trivy.sh  pyproject.toml  requirements.txt  requirements_optional.txt  setup.py
.github/workflows/: main.yml  mirror-to-codeberg.yaml  pub_docs  publish_sphinx.yaml  simplesecurity.yml  simplesecurity_pull_request.yml  simplesecurity_push.yml  sphinx.yml
DOCS/: README.md  deduplicate.md  filter.md  findings.md  formatter.md  level.md  plugins.md  readme.md  types.md
DOCS/simplesecurity/: filter.md  formatter.md  index.md  level.md  module.md  plugins.md  types.md
docs/: index.html  requirements.txt
docs/source/: changelog.rst  codeOfConduct.rst  conf.py  contribution.rst  gettingstarted.rst  index.rst  license.rst  modules.rst  rationale.rst  security.rst  simplesecurity.rst  support.rst
documentation/reference/: README.md
documentation/reference/simplesecurity/: excluded.md  filter.md  formatter.md  index.md  level.md  module.md  plugins.md  types.md
simplesecurity/: __init__.py  __main__.py  deduplicate.py  excluded.py  filter.py  findings.py  formatter.py  github.py  level.py  plugins.py  semgrep_sec.yaml  types.py
tests/: test_filter.py  test_formatter.py  test_plugin_utils.py
tests/data/: advanced.ansi  advanced.csv  advanced.json  advanced.md  advanced.sarif  evidence.txt  evidence_big.txt  sarif-schema-2.1.0.json  simple.ansi  simple.csv  simple.json  simple.md  simple.sarif
