[tool.poetry]
name = "simplesecurity"
version = "2023.1.1"
license = "mit"
description = "Combine multiple popular python security tools and generate reports or output into different formats"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Environment :: MacOS X",
	"Environment :: Win32 (MS Windows)",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Security",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/SimpleSecurity"
repository = "https://github.com/FHPythonUtils/SimpleSecurity"
documentation = "https://github.com/FHPythonUtils/SimpleSecurity/blob/master/README.md"
readme = "README.md"

[tool.poetry.scripts]
simplesecurity = 'simplesecurity:cli'

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.1.10"
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-json = "^21.7.0"
isort = "^5.10.1"
mypy = "0.*"
bandit = "^1.7.0"
safety = "^1.10.3"
dodgy = "<2,>=0.2.1"
dlint = "<2,>=0.11.0"
semgrep = "^1.2.0"
pygithub = "^1.57"
sphinx = "^5.3.0"
docutils = "0.17"
livereload = "^2.6.3"
sphinx-autodoc-typehints = "^1.19.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-patterns = "test_.*?py"

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = [
	"pointless-string-statement",
	"superfluous-parens",
	"bad-continuation"
]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"
