[tool.poetry]
name = "simplesecurity"
version = "2022"
license = "mit"
description = "Combine multiple popular python security tools and generate reports or output into different formats"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Environment :: MacOS X",
	"Environment :: Win32 (MS Windows)",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Security",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities",
]
homepage = "https://github.com/FHPythonUtils/SimpleSecurity"
repository = "https://github.com/FHPythonUtils/SimpleSecurity"
documentation = "https://github.com/FHPythonUtils/SimpleSecurity/blob/master/README.md"
readme = "README.md"

[tool.poetry.scripts]
simplesecurity = 'simplesecurity:cli'

[tool.poetry.dependencies]
python = "^3.7"
poetry = { version = "<2,>=1.1.10", optional = true }
bandit = { version = "<2,>=1.7.0", optional = true }
safety = { version = "<2,>=1.10.3", optional = true }
dodgy = { version = "<2,>=0.2.1", optional = true }
dlint = { version = "<2,>=0.11.0", optional = true }
semgrep = { version = "<2,>=0.67.0", optional = true }

[tool.poetry.extras]
full = ["poetry", "bandit", "safety", "dodgy", "dlint", "semgrep"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-paths = ["tests"]

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = ["pointless-string-statement", "superfluous-parens"]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py311
	py310
	py39
	py38

[testenv]
deps = pytest
commands = pytest tests
"""
